--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,5 +1,5 @@
 name: Generate snake animation
-
+#<p align="left"> <img src="https://komarev.com/ghpvc/?username=dhruvak001&label=Profile%20views&color=0e75b6&style=flat" alt="dhruvak001" /> </p>
 on:
   schedule: # execute every 12 hours
     - cron: "0 */12 * * *" # Ensures proper cron syntax (0 at start for the minute)
